Codificação do metodo delete
